@@ -5,6 +5,7 @@
  * Rage (and perhaps other powers) should no longer be multipled by 10 in the Resource Display icon type.
  * Warriors in Gladiator Stance will now be treated as DPS for groups' role settings, and for the Specialization Role condition.
  * The "Force top-row runes..." condition setting checkbox should now always reflect the icon's settings.
+ * The Zone PvP Type condition now actually works.
 
 ===v7.2.1===
 ====Bug Fixes====
